Push footer down and made main content takeover entire webpage using flex style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
@@ -7,23 +5,32 @@
     box-sizing: border-box;
 }
 
-
-
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+}
 
 
 
 
 /* Header */
 header {
-    background-color: lightcoral ;
+    background-color: lightcoral;
 }
 
 /* Main content */
 main {
     background-color: lightblue;
+    /* Make main element take up any surplus space to push footer */
+    flex: 10 auto;
 }
 
 /* Footer */
 footer {
     background-color: orange;
+    
 }
