--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,14 @@ header {
     background-color: lightcoral;
 }
 
+
+h1 {
+
+font-family: 'Oswald', sans-serif;
+
+
+}
+
 /* Main content */
 main {
     background-color: lightblue;
