--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family:'lato', sans-serif ;
+    font-family: 'lato', sans-serif;
 }
 
 
@@ -40,11 +40,41 @@ header {
 }
 
 
-h1 {
-
-font-family: 'Oswald', sans-serif;
+header a {
+    text-decoration: none;
+    color: inherit;
 
 }
+
+h1 {
+
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
+
+#menu {
+
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+
+}
+
+
+#menu>li {
+    margin-bottom: 1em;
+
+}
+
+
+.active {
+
+    border-bottom: 1px solid #3a3a3a;
+} 
+
 
 /* Main content */
 main {
