--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,8 +119,22 @@ main {
 }
 
 /* Footer */
-footer {
-    background-color: orange;
+#social-networks {
+
+    text-align: center;
+    padding: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+
+}
+
+
+#social-networks i {
+
+font-size: 160%;
+padding: 5%;
+color: #3a3a3a;
 
 }
 
@@ -176,7 +190,7 @@ footer {
 /* Media query: Laptops and larger (992px and up) */
 @media screen and (min-width: 992px) {
 
-    #menu  a:hover {
+    #menu a:hover {
 
         border-bottom: 1px solid #3a3a3a;
 
