--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,11 +112,27 @@ nav {
 
 /* Main content */
 main {
-    background-color: lightblue;
+   
     /* Make main element take up any surplus space to push footer */
     flex: 10 auto;
     margin-top: 47px;
 }
+
+/* Hero section */
+
+#hero {
+
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover ;
+
+
+
+}
+
+
+
+
 
 /* Footer */
 #social-networks {
@@ -132,9 +148,9 @@ main {
 
 #social-networks i {
 
-font-size: 160%;
-padding: 5%;
-color: #3a3a3a;
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 
 }
 
