--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,15 @@ body {
 }
 
 
+h1,
+h2,
+h3 {
 
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
 
 /* Header */
 header {
@@ -49,13 +57,7 @@ header a {
 
 }
 
-h1 {
 
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
 
 
 #menu {
@@ -112,7 +114,7 @@ nav {
 
 /* Main content */
 main {
-   
+
     /* Make main element take up any surplus space to push footer */
     flex: 10 auto;
     margin-top: 47px;
@@ -124,13 +126,31 @@ main {
 
     height: 600px;
     width: 100%;
-    background: url("../images/hero-image.webp") no-repeat center center/cover ;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
 
 
 
 }
 
 
+#cover-text {
+    /* the final rgba value (.7) sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text>h2,
+#cover-text>h3 {
+
+    color: #ffffff;
+}
 
 
 
@@ -188,20 +208,32 @@ main {
         font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
-
     }
 
 
 
-    /* Main content */
-    main {
-        /* Push main content down to accommodate larger*/
-        margin-top: 79px
+    /* Hero image */
+
+    #cover-text {
+
+        width: 300px;
+        right: 50px;
+
     }
-
-
 
 }
+
+
+
+/* Main content */
+main {
+    /* Push main content down to accommodate larger*/
+    margin-top: 79px
+}
+
+
+
+
 
 /* Media query: Laptops and larger (992px and up) */
 @media screen and (min-width: 992px) {
