--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,6 +242,19 @@ main {
 }
 
 
+/* Gallery Page */
+
+#photo img {
+
+    width: 100%;
+    line-height: 1em;
+} 
+
+#photos {
+
+    line-height: 0;
+}
+
 /* Footer */
 #social-networks {
 
