--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,7 +248,7 @@ main {
 
     width: 100%;
     line-height: 1em;
-} 
+}
 
 #photos {
 
@@ -274,6 +274,19 @@ main {
     color: #3a3a3a;
 
 }
+
+
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
+
+
+
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -354,6 +367,10 @@ main {
         align-self: flex-end;
     }
 
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
 
 }
 
@@ -380,7 +397,10 @@ main {
     }
 
 
-
+    /* Gallery */
+    #photos {
+        column-count: 4;
+    }
 }
 
 
