--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
 /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
@@ -10,12 +8,6 @@
     box-sizing: border-box;
 }
 
-
-
-
-
-
-
 /* General styles */
 body {
     min-height: 100vh;
@@ -23,21 +15,17 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family: 'lato', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
-
 
 h1,
 h2,
 h3 {
-
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
 }
-
-
 
 .hidden-heading {
     display: none;
@@ -56,52 +44,36 @@ header {
     align-items: baseline;
 }
 
-
 header a {
     text-decoration: none;
     color: inherit;
-
 }
 
-
-
-
 #menu {
-
     font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
-
 }
-
 
 #menu>li {
     margin-bottom: 1em;
-
 }
 
-
 .active {
-
     border-bottom: 1px solid #3a3a3a;
 }
 
-
 /* Navbar styles with dropdown toggle */
-
 nav {
-
     position: absolute;
     background-color: #ffffff;
     width: 100%;
-    left: 0%;
+    left: 0;
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
     top: 100%;
-
 }
-
 
 /* Nav toggle */
 #nav-toggle:checked~nav {
@@ -112,36 +84,31 @@ nav {
     display: none;
 }
 
-
 .nav-toggle-label {
     font-size: 2rem;
 }
 
-
 /* Main content */
 main {
-
-    /* Make main element take up any surplus space to push footer */
-    flex: 10 auto;
+    /* Enlarge main element to push footer down*/
+    flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
     margin-top: 47px;
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
-
 #hero {
-
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
-
-
-
 }
 
-
 #cover-text {
-    /* the final rgba value (.7) sets the opacity so it is semi-transparent */
+    /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
@@ -154,10 +121,8 @@ main {
 
 #cover-text>h2,
 #cover-text>h3 {
-
     color: #ffffff;
 }
-
 
 /* Reasons section */
 #reasons {
@@ -186,34 +151,22 @@ main {
     margin: 5px 0;
 }
 
-/* Reasons Image */
-
 #circle-cover-bg {
-
-    background: url(../images/reasons-image.webp) no-repeat top center / cover;
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
-
-
-
+    /* Makes the square image into a circle */
     border-radius: 50%;
-    /* This makes the image turn from a square into a circle */
-
     max-width: 300px;
     max-height: 300px;
-
-
 }
-
 
 #benefits-image {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
-
 
 /* Meetup Times section */
 #times {
@@ -232,7 +185,7 @@ main {
     Each div will expand to fill the available space on its row */
     flex-basis: 200px;
     flex-grow: 1;
-    /* Creates a grid of meetup time divs over the background image */
+    /* Creates a grid of meetup time dives over the background image */
     border: 2px solid white;
 }
 
@@ -241,220 +194,14 @@ main {
     color: #fafafa;
 }
 
-
-/* Gallery Page */
-
-#photo img {
-
+/* Gallery page */
+#photos img {
     width: 100%;
     line-height: 1em;
 }
 
 #photos {
-
     line-height: 0;
-}
-
-
-
-
-
-
-
-/* Footer */
-#social-networks {
-
-    text-align: center;
-    padding: 20px;
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-
-}
-
-
-#social-networks i {
-
-    font-size: 160%;
-    padding: 5%;
-    color: #3a3a3a;
-
-}
-
-
-/* Media query: large or landscape phones (576px and up) */
-@media screen and (min-width: 576px) {
-    #photos {
-        column-count: 2;
-        column-gap: 0;
-    }
-}
-
-
-
-
-
-/* Media query: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {
-
-    /* Header */
-
-    nav {
-        display: block;
-        position: relative;
-        box-shadow: none;
-        width: fit-content;
-        padding-right: 1rem;
-    }
-
-
-    #menu {
-
-        display: flex;
-    }
-
-    #menu>li {
-        padding-left: 1rem;
-    }
-
-
-    .nav-toggle-label {
-        display: none;
-    }
-
-
-    #logo {
-
-        font-size: 280%;
-        line-height: 75px;
-        margin: 0 0.5rem;
-    }
-
-
-
-    /* Hero image */
-
-    #cover-text {
-
-        width: 300px;
-        right: 50px;
-
-    }
-
-
-    /* Reasons section */
-
-    #benefits-physical,
-    #benefits-mental {
-
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-
-
-
-    }
-
-    #benefits-physical>div,
-    #benefits-mental>div {
-
-        width: 75%;
-
-
-    }
-
-
-
-
-
-    #benefits-mental>div {
-
-        text-align: end;
-        align-self: flex-end;
-    }
-
-    /* Gallery */
-    #photos {
-        column-count: 3;
-    }
-
-}
-
-
-
-/* Main content */
-main {
-    /* Push main content down to accommodate larger*/
-    margin-top: 79px
-}
-
-
-
-
-
-/* Media query: Laptops and larger (992px and up) */
-@media screen and (min-width: 992px) {
-
-    #menu a:hover {
-
-        border-bottom: 1px solid #3a3a3a;
-
-
-    }
-
-
-    /* Gallery */
-    #photos {
-        column-count: 4;
-    }
-}
-
-
-@media screen and (min-width: 1200px) {
-
-    /* Reasons section */
-    #benefits {
-        display: flex;
-        flex-direction: row;
-    }
-
-    #benefits>div {
-        flex: 1;
-    }
-
-
-    #benefits-image {
-        order: 0
-    }
-
-
-    #benefits-mental {
-        order: 1;
-    }
-
-
-    #benefits-mental>div {
-        align-self: flex-start;
-    }
-
-
-    #benefits-physical>div {
-        align-self: flex-end;
-    }
-
-}
-
-
-
-/* Main content */
-main {
-    /* Enlarge main element to push footer down*/
-    flex: 1 0 auto;
-    /* Add margin at the top to prevent content from being covered by the header */
-    margin-top: 47px;
-    /* Enable flex properties for child elements */
-    display: flex;
-    flex-direction: column;
 }
 
 /* Form */
@@ -466,16 +213,19 @@ main {
     flex-grow: 1;
 }
 
+
 #signup-form {
     color: #ffffff;
     background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
 }
 
+
 #signup-form>h2 {
     color: #fafafa;
     margin-bottom: 20px;
 }
+
 
 .text-input {
     background: transparent;
@@ -488,11 +238,13 @@ main {
     padding: 0 5px;
 }
 
+
 .radio-buttons {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
+
 
 .join-button {
     margin-top: 20px;
@@ -503,14 +255,93 @@ main {
     color: #fafafa;
 }
 
+/* Footer */
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
 
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
+}
 
-/* Sign up Page */
-
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu>li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
+    }
+
+    /* Hero */
+    #cover-text {
+        width: 300px;
+        right: 50px;
+    }
+
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical>div,
+    #benefits-mental>div {
+        width: 75%;
+    }
+
+    #benefits-mental>div {
+        text-align: end;
+        align-self: flex-end;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
 
     /* Form */
     #signup {
@@ -532,5 +363,46 @@ main {
     .join-button:hover {
         background-color: #fafafa;
         color: #454b1b;
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 4;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
+    /* Reasons section */
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #benefits>div {
+        flex: 1;
+    }
+
+    #benefits-image {
+        order: 0
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental>div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical>div {
+        align-self: flex-end;
     }
 }
